# SG-Pre-terminal

./: .gitignore  README.md  justfile  proposal.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  on-create.sh  start.sh
.gemini/commands/: bmad-agent-bmm-game-architect.toml  bmad-agent-bmm-tech-writer.toml  bmad-agent-cis-brainstorming-coach.toml  bmad-agent-cis-design-thinking-coach.toml  bmad-task-bmm-daily-standup.toml  bmad-task-core-adv-elicit.toml  bmad-task-core-index-docs.toml  bmad-task-core-validate-workflow.toml  bmad-task-core-workflow.toml
.logging/requests/: 2025-10-30_19-09-31-82ac76b6-75b5-4ce5-8619-37f2b564a85a.json  2025-10-30_19-09-31-87c9bfa1-e722-450e-b1a9-82180b5bda50.json  (+32 more)
docs/: PRD.md  architecture.md  backlog.md  bmm-workflow-status.md  bmm-workflow-status.yaml  brainstorming-session-results-2025-10-29.md  epics.md  high-level-implementation-plan-2025-10-31.md  implementation-readiness-report-2025-11-30.md  product-brief-Excelence-2025-11-04.md  project-plan.md  tech-stack-validation-2025-10-31.md  technical-research-analysis-2025-10-31.md  ux-color-themes.html  ux-design-directions.html  ux-design-specification.md  validation-report-20251114.md  validation-report-20251127-1.md  validation-report-20251127-2.md  validation-report-20251127-3.md  validation-report-20251128-2.md  validation-report-20251128-final.md  validation-report-20251128.md
excelence/backend/: main.py  pyproject.toml  requirements.txt  test.db
excelence/backend/app/api/: deps.py
excelence/backend/app/api/v1/endpoints/: auth.py  categories.py  transactions.py
excelence/backend/app/core/: config.py
excelence/backend/app/crud/: __init__.py  crud_user.py  transactions.py
excelence/backend/app/db/: init_db.py  session.py
excelence/backend/app/models/: user.py
excelence/backend/app/schemas/: user.py
excelence/backend/tests/: conftest.py  test_user_registration.py
excelence/backend/tests/api/v1/: test_auth.py  test_categories.py  test_transactions.py  test_transactions_delete.py  test_users.py
(+60 files in other folders)
