[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "==0.104.1"
uvicorn = "==0.24.0.post1"
pydantic = "<2.0"
sqlalchemy = "==2.0.23"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
python-jose = {version = "3.3.0", extras = ["cryptography"]}
python-dotenv = "==1.0.0"

[tool.poetry.dev-dependencies]
pytest = "==8.2.2"
httpx = "==0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
