[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0.post1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator==2.1.1",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.0",
    "supabase==2.5.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "httpx==0.27.0",
    "pytest-mock==3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
